test/parser/error/err_12_procedure_param_dup.pl0
program p; 
procedure f(x, x); begin end; 
begin 
end